--- a/src/views/component/Navigation/main-navigation/style.less
+++ b/src/views/component/Navigation/main-navigation/style.less
@@ -29,6 +29,10 @@ body.navigation-open {
     secondary-items {
       display: block;
     }
+
+    .navbar-nav.navbar-right:last-child {
+      margin-right: 0;
+    }
   }
 }
 
