--- a/src/views/component/Navigation/main-navigation/sub-navigation/style.less
+++ b/src/views/component/Navigation/main-navigation/sub-navigation/style.less
@@ -35,8 +35,13 @@
     color: #041e42;
     letter-spacing: .03rem;
     text-transform: uppercase;
-    padding-left: 2.7rem;
-    padding-right: 4.5rem;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+    width: 169px;
+    display: inline-block;
+    border-right: 1px solid #e2e2e2;
   }
 
   ::content {
